Remove library wait for expect. Refactor FlashMessage Component. Fix FlashMessage styles where component would cause scrollbar to appear. Add FlashMessageActions. Add FlashMessageStore. Add FlashMessage constants.

--- a/src/components/FlashMessage/styles.scss
+++ b/src/components/FlashMessage/styles.scss
@@ -1,9 +1,10 @@
 .flash-message {
-  bottom: -17px;
+  bottom: 0px;
   position: absolute;
   width: 100%;
 
   .alert {
+    margin: 0;
     border-radius: 0;
     color: white;
     padding: 20px;
